# as3ninja

./: .dockerignore  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  _README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-pipeline.yaml  codeql.yml  release-pypi.yaml
as3ninja/: __init__.py  __main__.py  api.py  cli.py  declaration.py  exceptions.py  filters.py  functions.py  gitget.py  schema.py  settings.py  templateconfiguration.py  types.py  utils.py  vault.py
as3ninja/jinja2/: __init__.py  filterfunctions.py  filters.py  functions.py  j2ninja.py  tests.py
as3ninja/schema/: __init__.py  as3schema.py  formatcheckers.py
docs/: Makefile  SUPPORT.rst  _heading.rst  as3ninja.jinja2.rst  as3ninja.rst  as3ninja.schema.rst  as3ninja_settings.rst  authors.rst  concepts.rst  conf.py  contributing.rst  examples.rst  history.rst  index.rst  installation.rst  modules.rst  readme.rst  requirements.txt  support.rst  templating.rst  todos.rst  usage.rst  vault.rst
docs/docs/: _heading.rst
examples/: AS3Ninja.postman_collection.json  README.md
examples/dynamic-irule/: Makefile  README.md  config.yaml  declaration.j2  declaration.json  game.irule
examples/dynamic-irule/lessons/: lesson10.js  lesson4.js
examples/simple/: README.md  declaration.json  declaration_with_overlay.json  http_path_header.iRule  ninja.yaml  overlay.json  sorry_page.iRule  template.j2
examples/yaml_all_the_way/: Makefile  README.md  all_tenants.yaml  template.j2  tenant_CakeFactory.yaml  tenant_CookieCorp.yaml
examples/yaml_all_the_way/tenants/CakeFactory/: tenant.yaml
examples/yaml_all_the_way/tenants/CakeFactory/apps/: website.yaml
examples/yaml_all_the_way/tenants/CookieCorp/: tenant.yaml
examples/yaml_all_the_way/tenants/CookieCorp/apps/: custom_cookies.yaml  website.yaml
examples/yaml_all_the_way/tenants/CookieCorp/secrets/: custom_cookies.yaml
examples/yaml_datatypes/: README.md  config.yaml  output.json  template.j2
tests/: __init__.py  install.sh  pytest.ini  reporting.sh  run_tests.sh  test_api.py  test_api_docker.py  test_cli.py  test_declaration.py  test_filters.py  test_functions.py  test_gitget.py  test_jinja2_filters.py  test_jinja2_functions.py  test_jinja2_j2ninja.py  test_main.py  test_schema.py  test_schema_as3schema.py  test_schema_formatcheckers.py  test_settings.py  test_templateconfiguration.py  test_types.py  test_utils.py  test_vault.py  utils.py
tests/testdata/AS3TemplateConfiguration/: file.json  file.yaml  include1.yaml  include1_relativePath.yaml  include2.yaml  include3.yaml  included1.yaml  included2a.yaml  included2b.yaml  included2c.yaml  included3.yaml
tests/testdata/api/transform_git/: template.jinja2
tests/testdata/cli/transform_git/: config.yaml  config2.yaml  template.jinja2
tests/testdata/cli/validate/: errors.json
tests/testdata/declaration/syntax_error/: include.jinja2
tests/testdata/declaration/transform/: include.j2  template.j2
tests/testdata/filters/: ninjutsu.j2
tests/testdata/functions/: utf8.txt
tests/testdata/functions/iterfiles/json/: file.json
tests/testdata/functions/iterfiles/text/: file.txt
tests/testdata/functions/iterfiles/yaml/: file.yaml
tests/testdata/utils/deserialize/: circular_RecursionError.yaml  double.yaml  double_incorrect_usage.yaml  double_single_result.yaml  explicit.yaml  force_list.yaml  non_existend_include.yaml  single_2.yaml  single_all.yaml  type_error.yaml
tests/testdata/utils/deserialize/include.d/: 2.yaml  3.yaml
tests/testdata/utils/deserialize/include.d/one/: 1.yaml
tests/testdata/utils/deserialize/nested/: a.yaml  b.yaml  c.yaml
