[tool.poetry]
name = "as3ninja"

version = "0.6.1"  # as3ninja/__init__.py -> __version__
license = "ISC"
description = "AS3 Ninja is a templating and validation engine for your AS3 declarations providing a CLI and Swagger REST API"
readme = "README.md"

authors = ["Simon Kowallik <github@simonkowallik.com>"]
maintainers = ["Simon Kowallik <github@simonkowallik.com>"]

homepage = "https://github.com/simonkowallik/as3ninja"
repository = "https://github.com/simonkowallik/as3ninja"
documentation = "https://as3ninja.readthedocs.io/"

keywords = [
    "F5",
    "AS3",
    "DevOps",
    "Security",
]

classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: System",
    "Topic :: Security",
]

include = [
    "docs/*",
    "docs/_static/*",
    "tests/*",
]

[tool.poetry.scripts]
as3ninja = "as3ninja.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
hvac = "^0.11.2"
jinja2 = "^3.1.2"
jsonschema = "^4.17.0"
loguru = ">=0.6.0, <1"
pydantic = "^1.9.2"
pyyaml = "^6.0"
six = "^1.16.0"
click = "^8.1.3"
fastapi = ">=0.79.1, <1"
uvicorn = "^0.18.2"  # required by Dockerfile

[tool.poetry.group.dev.dependencies]
black = "^22"
isort = "^5"
mypy = "^0.971"
pylint = "^2"
ipykernel = "^6.21.1"

[tool.poetry.group.test.dependencies]
pytest = "^7"
httpx = "^0.23.1"
mock = "^4"
coverage = "^6"
pytest-cov = "^4"
pytest-mock = "^3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5"
sphinx-autodoc-typehints = "^1"
sphinx_rtd_theme = "^1"

[tool.poetry.urls]
issues = "https://github.com/simonkowallik/as3ninja/issues"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
